tests/integration/snapshots/integration__hover__hover_on_table_definition.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&res).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\ntable MyTable {\n  a: int\n}\n```"
  },
  "range": {
    "start": {
      "line": 1,
      "character": 6
    },
    "end": {
      "line": 1,
      "character": 13
    }
  }
}
