tests/integration/snapshots/integration__hover__hover_on_union_member.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\ntable MyTable {\n  b:bool;\n}\n```\n\n---\n\n A table with b."
  },
  "range": {
    "start": {
      "line": 7,
      "character": 4
    },
    "end": {
      "line": 7,
      "character": 11
    }
  }
}
