tests/integration/snapshots/integration__hover__hover_table_namespace.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nnamespace Global;\n\ntable ProductionLine {\n  widget:Widget;\n}\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 6
    },
    "end": {
      "line": 4,
      "character": 20
    }
  }
}
