tests/integration/snapshots/integration__hover__hover_union_namespaced_member_aliased.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nnamespace Global;\n\ntable Foo {}\n```"
  },
  "range": {
    "start": {
      "line": 5,
      "character": 25
    },
    "end": {
      "line": 5,
      "character": 28
    }
  }
}
